@@ -1,4 +1,7 @@
 2010-02-19  Piotr Fusik  <fox@scene.pl>
+* win32/bass/bass_asap.c: implemented ID3 tag, unfortunately AIMP2
+  doesn't ask for it
+
 * win32/setup/asap.wxs, win32/setup/wix_mutex.pl: BASS add-on for AIMP
 
 * win32/setup/license.rtf: updated years
